@@ -1,3 +1,10 @@
+2007-11-15  Sven Neumann  <sven@gimp.org>
+
+	Merged from trunk:
+
+	* plug-ins/common/tiff-save.c (save_image): fixed bug in colormap
+	handling (bug #497103).
+
 2007-11-13  Sven Neumann  <sven@gimp.org>
 
 	Merged from trunk:
